# weaver-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
etc/: config.toml
protocol/: weaver.proto
src/: config.rs  consumer.rs  error.rs  lib.rs  metrics.rs  weaver.rs
